# BAM-CLI

./: LICENSE  README.md  api-v1.py  bam-python-rest-lib.py  bc_dns_delta.sql  changed_zones.py  config.py  new_schema.sql  pip-list.txt  pybam.py  pylib-v2.py  pyproject.toml  qwe.py  requirements.txt  schema.txt  update.txt  v2api.py
src/changed_zones/: cli.py  v2api.py
